--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
         width: 100vw;
         min-height: 100vh;
         background: linear-gradient(135deg, #153677, #4e085f);
+        overflow-x:hidden;
     }
     
     .main {
